update hbase jvm gc to G1